--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             background-color: #f9f9f9;
             color: #333;
-            font-size: 18px; /* Tamaño base de fuente aumentado */
+            font-size: 18px;
         }
         header {
             background-color: #333;
@@ -36,10 +36,12 @@
             font-size: 1.6em;
             color: #444;
             margin-top: 1.5em;
+            text-align: center;
         }
         h3 {
             font-size: 1.3em;
             color: #444;
+            text-align: center;
         }
         p, li {
             font-size: 1.1em;
@@ -59,10 +61,15 @@
             background-color: #333;
             color: #fff;
         }
-        /* Ajustes específicos para móviles */
+        .oracion {
+            margin: 2em 0;
+            padding: 1em;
+            background-color: #f8f8f8;
+            border-radius: 8px;
+        }
         @media (max-width: 600px) {
             body {
-                font-size: 20px; /* Aún más grande en móviles */
+                font-size: 20px;
             }
             main {
                 padding: 1rem;
@@ -89,18 +96,22 @@
     <main>
         <section>
             <h2>Invocación al Espíritu Santo</h2>
-            <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra...</p>
+            <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra. Oh Dios que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu, y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amén</p>
         </section>
+
         <section>
             <h2>Peticiones Especiales Antes del Rosario</h2>
             <p>Aquí expresamos todos nuestros agradecimientos y peticiones.</p>
         </section>
+
         <section>
             <h2>Credo</h2>
-            <p>Creo en Dios Padre todopoderoso, creador del cielo y de la tierra...</p>
+            <p>Creo en Dios Padre todopoderoso, creador del cielo y de la tierra. Creo en Jesucristo, su único Hijo, nuestro Señor, que fue concebido por obra y gracia del Espíritu Santo, nació de Santa María Virgen, padeció bajo el poder de Poncio Pilato, fue crucificado, muerto y sepultado, descendió a los infiernos, al tercer día resucitó de entre los muertos, subió a los cielos y está sentado a la derecha de Dios Padre todopoderoso. Desde allí ha de venir a juzgar a vivos y muertos. Creo en el Espíritu Santo, la Santa Iglesia Católica, la comunión de los santos, el perdón de los pecados, la resurrección de la carne y la vida eterna Amén.</p>
         </section>
+
         <section>
             <h2>Rosario a la Virgen María</h2>
+            
             <h3>Lunes y Sábados: Misterios Gozosos</h3>
             <ul>
                 <li>La anunciación</li>
@@ -109,6 +120,7 @@
                 <li>La presentación de Jesús en el templo</li>
                 <li>El Niño Jesús es hallado</li>
             </ul>
+
             <h3>Martes y Viernes: Misterios Dolorosos</h3>
             <ul>
                 <li>La oración en el huerto</li>
@@ -117,6 +129,7 @@
                 <li>Jesús camino al calvario</li>
                 <li>Jesús muere en la cruz</li>
             </ul>
+
             <h3>Miércoles y Domingos: Misterios Gloriosos</h3>
             <ul>
                 <li>La resurrección de Jesús</li>
@@ -125,6 +138,7 @@
                 <li>La asunción de María</li>
                 <li>La coronación de María</li>
             </ul>
+
             <h3>Jueves: Misterios Luminosos</h3>
             <ul>
                 <li>El Bautismo de Jesús</li>
@@ -134,14 +148,78 @@
                 <li>La Institución de la Eucaristía</li>
             </ul>
         </section>
+
         <section>
             <h2>Salve</h2>
-            <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra...</p>
+            <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los desterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lágrimas. Ea pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muéstranos a Jesús, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen María. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amén.</p>
         </section>
+
+        <section>
+            <h2>Evangelio del Siguiente Domingo y Lectio Divina</h2>
+        </section>
+
+        <section>
+            <h2>Oración para Cerrar la Lectio Divina</h2>
+        </section>
+
+        <section>
+            <h2>Peticiones y Acciones de Gracias al Señor</h2>
+            <div class="oracion">
+                <h3>Oración</h3>
+                <p>Acoge Padre todas estas oraciones que te dirigimos en nuestras necesidades, escucha también aquellas que se quedan en nuestros corazón y no nos atrevemos a decir. Escucha también nuestros agradecimientos por todo lo que nos ofreces, aun sin pedirlo.</p>
+            </div>
+        </section>
+
+        <section>
+            <h2>Padre Nuestro</h2>
+            <p>Padre nuestro que estás en el cielo, santificado sea tu nombre, venga a nosotros tu reino, hágase tu voluntad en la tierra como en el cielo. Danos hoy nuestro pan de cada día, perdona nuestras ofensas, como también nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación y líbranos del mal, amén.</p>
+        </section>
+
+        <section>
+            <h2>Oración a María</h2>
+            <p>Bajo tu amparo nos acogemos Santa Madre de Dios, no desprecies las súplicas que te dirigimos en nuestras necesidades, antes bien, líbranos de todo mal y peligro oh Virgen Gloriosa y Bendita, Amén.</p>
+        </section>
+
+        <section class="oracion">
+            <p>SAGRADO CORAZÓN DE JESÚS En vos confío</p>
+            <p>SAN JOSÉ VARÓN PRUDENTE Y JUSTO Ruega por nosotros</p>
+            <p>SANTA TERESA DE CALCUTA Ruega por nosotros</p>
+        </section>
+
+        <section>
+            <h2>Oración a San Miguel Arcángel</h2>
+            <p>San Miguel Arcángel, defiéndenos en la pelea, sé nuestro amparo contra la maldad y acechanzas del demonio, reprímele Tú Dios te pedimos suplicantes y Tú príncipe de la milicia celestial, armado del poder divino, arroja con ese inmenso poder, a satanás y a todos los espíritus malignos que andan por el mundo para la perdición de las almas, Amén.</p>
+        </section>
+
+        <section>
+            <h2>Oración a San Francisco de Asís</h2>
+            <p>Señor, haz de nosotros instrumentos de tu paz<br>
+            Donde haya odio, sembremos amor<br>
+            Donde haya injuria, perdón<br>
+            Donde haya duda fe<br>
+            Donde haya desesperación, esperanza<br>
+            Donde haya oscuridad, luz<br>
+            Donde haya tristeza, alegría<br>
+            Oh Divino maestro, concédenos que no busquemos<br>
+            Ser consolados, sino consolar<br>
+            Que no busquemos ser comprendidos<br>
+            Sino comprender<br>
+            Que no busquemos ser amados<br>
+            Sino amar<br>
+            Por que dando es como recibimos<br>
+            Perdonando es como Tú nos perdonas<br>
+            Y muriendo en Ti nacemos para la vida eterna. Amén.</p>
+        </section>
+
+        <section>
+            <h2>Oración Final a la Virgen María</h2>
+            <p>Dulce Madre no te alejes, tu vista de nosotros no apartes, ven con nosotros a todas partes y solos nunca nos dejes, y ya que nos quieres tanto como verdadera Madre, haz que en esta noche, nos bendiga, EL PADRE, EL HIJO Y EL ESPÍRITU SANTO AMÉN.</p>
+        </section>
+
         <section>
             <h2>Cumpleaños</h2>
             <ul>
-                <li>Sandra Caceres - Enero 4</li>
+                <li>Sandra Cáceres - Enero 4</li>
                 <li>Carmen Elena Delgado - Febrero 27</li>
                 <li>Socorro Carter (Soky) - Marzo 20</li>
                 <li>Monseñor Ricardo Tobón - Mayo 8</li>
