--- a/index.html
+++ b/index.html
@@ -5,57 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comunidad Santa Teresa de Calcuta</title>
     <style>
+        :root {
+            --primary-color: #1e3a8a;
+            --secondary-color: #3b82f6;
+            --accent-color: #60a5fa;
+            --background-color: #f0f9ff;
+            --text-color: #1e293b;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
+            line-height: 1.8;
+            max-width: 1000px;
             margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-            color: #333;
+            padding: 30px;
+            background-color: var(--background-color);
+            color: var(--text-color);
         }
 
         h1 {
-            color: #2c3e50;
+            color: var(--primary-color);
             text-align: center;
-            margin-bottom: 30px;
-            font-size: 2em;
+            margin: 40px 0;
+            font-size: 2.5em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            border-bottom: 3px solid var(--accent-color);
+            padding-bottom: 15px;
         }
 
         h2 {
-            color: #34495e;
-            margin-top: 30px;
-            margin-bottom: 15px;
-            font-size: 1.5em;
-            border-bottom: 2px solid #bdc3c7;
-            padding-bottom: 5px;
+            color: var(--primary-color);
+            margin-top: 35px;
+            margin-bottom: 20px;
+            font-size: 1.8em;
+            border-left: 5px solid var(--secondary-color);
+            padding-left: 15px;
         }
 
         .prayer {
             background-color: white;
-            padding: 20px;
-            margin: 15px 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 30px;
+            margin: 25px 0;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .prayer:hover {
+            transform: translateY(-5px);
         }
 
         .mysteries {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 20px 0;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 25px;
+            margin: 30px 0;
         }
 
         .mystery-group {
             background-color: white;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 25px;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .mystery-group:hover {
+            transform: translateY(-5px);
         }
 
         .mystery-group h3 {
-            color: #2c3e50;
+            color: var(--primary-color);
             margin-top: 0;
+            padding-bottom: 10px;
+            border-bottom: 2px solid var(--accent-color);
         }
 
         .mystery-group ul {
@@ -64,85 +88,109 @@
         }
 
         .mystery-group li {
-            margin-bottom: 8px;
-            padding-left: 20px;
+            margin-bottom: 12px;
+            padding-left: 25px;
             position: relative;
         }
 
         .mystery-group li:before {
-            content: "•";
+            content: "✝";
             position: absolute;
             left: 0;
-            color: #3498db;
+            color: var(--secondary-color);
         }
 
         .birthdays {
             background-color: white;
-            padding: 20px;
-            margin: 15px 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 30px;
+            margin: 25px 0;
+            border-radius: 15px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
-        .birthdays ul {
-            list-style-type: none;
-            padding: 0;
+        .birthdays-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 10px;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
         }
 
-        .birthdays li {
-            padding: 8px;
-            border-radius: 4px;
-            background-color: #f8f9fa;
+        .birthday-month {
+            background-color: #f8fafc;
+            padding: 20px;
+            border-radius: 10px;
+            border-left: 4px solid var(--secondary-color);
         }
 
-        .birthdays strong {
-            color: #2c3e50;
-            margin-left: 8px;
+        .birthday-month h4 {
+            color: var(--primary-color);
+            margin: 0 0 15px 0;
+            font-size: 1.2em;
+            border-bottom: 2px solid var(--accent-color);
+            padding-bottom: 8px;
         }
 
-        @media (max-width: 600px) {
+        .birthday-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 8px 0;
+            border-bottom: 1px solid #e2e8f0;
+        }
+
+        .birthday-item:last-child {
+            border-bottom: none;
+        }
+
+        .birthday-name {
+            font-weight: 500;
+        }
+
+        .birthday-date {
+            color: var(--secondary-color);
+            font-weight: 600;
+        }
+
+        @media (max-width: 768px) {
             body {
                 padding: 15px;
             }
 
             h1 {
-                font-size: 1.8em;
+                font-size: 2em;
             }
 
             h2 {
-                font-size: 1.3em;
+                font-size: 1.5em;
             }
 
-            .prayer {
-                padding: 15px;
+            .prayer, .mystery-group, .birthdays {
+                padding: 20px;
             }
 
-            .birthdays ul {
+            .birthdays-grid {
                 grid-template-columns: 1fr;
             }
         }
     </style>
 </head>
 <body>
-    <h1>COMUNIDAD SANTA TERESA DE CALCUTA</h1>
+    <h1>Comunidad Santa Teresa de Calcuta</h1>
 
     <div class="prayer">
-        <h2>INVOCACIÓN AL ESPÍRITU SANTO</h2>
+        <h2>Invocación al Espíritu Santo</h2>
         <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de tu amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra. Oh Dios, que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amén</p>
     </div>
 
     <div class="prayer">
-        <h2>CREDO</h2>
+        <h2>Credo</h2>
         <p>Creo en Dios Padre todopoderoso, creador del cielo y de la tierra. Creo en Jesucristo, su único Hijo, nuestro Señor, que fue concebido por obra y gracia del Espíritu Santo, nació de Santa María Virgen, padeció bajo el poder de Poncio Pilato, fue crucificado, muerto y sepultado, descendió a los infiernos, al tercer día resucitó de entre los muertos, subió a los cielos y está sentado a la derecha de Dios Padre todopoderoso. Desde allí ha de venir a juzgar a vivos y muertos. Creo en el Espíritu Santo, la Santa Iglesia Católica, la comunión de los santos, el perdón de los pecados, la resurrección de la carne y la vida eterna Amén.</p>
     </div>
 
-    <h2>ROSARIO A LA VIRGEN MARÍA</h2>
+    <h2>Rosario a la Virgen María</h2>
     <div class="mysteries">
         <div class="mystery-group">
-            <h3>Lunes y Sábados - MISTERIOS GOZOSOS</h3>
+            <h3>Lunes y Sábados - Misterios Gozosos</h3>
             <ul>
                 <li>La anunciación</li>
                 <li>La Visita de María a Santa Isabel</li>
@@ -153,7 +201,7 @@
         </div>
 
         <div class="mystery-group">
-            <h3>Martes y Viernes - MISTERIOS DOLOROSOS</h3>
+            <h3>Martes y Viernes - Misterios Dolorosos</h3>
             <ul>
                 <li>La oración en el huerto</li>
                 <li>La flagelación de Jesús</li>
@@ -164,7 +212,7 @@
         </div>
 
         <div class="mystery-group">
-            <h3>Miércoles y Domingos - MISTERIOS GLORIOSOS</h3>
+            <h3>Miércoles y Domingos - Misterios Gloriosos</h3>
             <ul>
                 <li>La resurrección de Jesús</li>
                 <li>La ascensión de Jesús</li>
@@ -175,7 +223,7 @@
         </div>
 
         <div class="mystery-group">
-            <h3>Jueves - MISTERIOS LUMINOSOS</h3>
+            <h3>Jueves - Misterios Luminosos</h3>
             <ul>
                 <li>El Bautismo de Jesús</li>
                 <li>Las bodas de Caná</li>
@@ -187,22 +235,22 @@
     </div>
 
     <div class="prayer">
-        <h2>SALVE</h2>
+        <h2>Salve</h2>
         <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los desterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lágrimas. Ea pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muéstranos a Jesús, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen María. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amén.</p>
     </div>
 
     <div class="prayer">
-        <h2>PADRE NUESTRO</h2>
+        <h2>Padre Nuestro</h2>
         <p>Padre nuestro que estás en el cielo, santificado sea tu nombre, venga a nosotros tu reino, hágase tu voluntad en la tierra como en el cielo. Danos hoy nuestro pan de cada día, perdona nuestras ofensas, como también nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación y líbranos del mal, amén.</p>
     </div>
 
     <div class="prayer">
-        <h2>ORACIÓN A SAN MIGUEL ARCÁNGEL</h2>
+        <h2>Oración a San Miguel Arcángel</h2>
         <p>San Miguel Arcángel, defiéndenos en la pelea, sé nuestro amparo contra la maldad y acechanzas del demonio, reprímele Tú Dios te pedimos suplicantes y Tú príncipe de la milicia celestial, armado del poder divino, arroja con ese inmenso poder, a satanás y a todos los espíritus malignos que andan por el mundo para la perdición de las almas, Amén.</p>
     </div>
 
     <div class="prayer">
-        <h2>ORACIÓN A SAN FRANCISCO DE ASÍS</h2>
+        <h2>Oración a San Francisco de Asís</h2>
         <p>Señor, haz de nosotros instrumentos de tu paz<br>
         Donde haya odio, sembremos amor<br>
         Donde haya injuria, perdón<br>
@@ -222,30 +270,55 @@
     </div>
 
     <div class="prayer">
-        <h2>ORACIÓN FINAL A LA VIRGEN MARÍA</h2>
+        <h2>Oración Final a la Virgen María</h2>
         <p>Dulce Madre no te alejes, tu vista de nosotros no apartes, ven con nosotros a todas partes y solos nunca nos dejes, y ya que nos quieres tanto como verdadera Madre, haz que en esta noche, nos bendiga, EL PADRE, EL HIJO Y EL ESPÍRITU SANTO AMÉN.</p>
     </div>
 
     <div class="birthdays">
-        <h2>CUMPLEAÑOS</h2>
-        <ul>
-            <li>SANDRA CACERES <strong>ENERO 4</strong></li>
-            <li>CARMEN ELENA DELGADO <strong>FEBRERO 27</strong></li>
-            <li>SOCORRO CARTER (SOKY) <strong>MARZO 20</strong></li>
-            <li>MONSEÑOR RICARDO TOBON <strong>MAYO 8</strong></li>
-            <li>MILDRED MENDEZ <strong>JUNIO 16</strong></li>
-            <li>BEATRIZ MARTINEZ <strong>JULIO 28</strong></li>
-            <li>GLADYS GIL <strong>AGOSTO 5</strong></li>
-            <li>FRANCISCO JOSE GIL (PACHO) <strong>AGOSTO 6</strong></li>
-            <li>PILAR PINEDA <strong>AGOSTO 25</strong></li>
-            <li>CARMENZA FAJARDO <strong>AGOSTO 28</strong></li>
-            <li>GERMAN OCAMPO <strong>SEPTIEMBRE 19</strong></li>
-            <li>MAURICIO QUINTERO <strong>SEPTIEMBRE 20</strong></li>
-            <li>MIRIAM COBO <strong>SEPTIEMBRE 28</strong></li>
-            <li>JOE MARTINEZ <strong>NOVIEMBRE 19</strong></li>
-            <li>ROCIO OCAMPO <strong>DICIEMBRE 3</strong></li>
-            <li>PILAR JARAMILLO <strong>DICIEMBRE 8</strong></li>
-        </ul>
-    </div>
-</body>
-</html>
+        <h2>Cumpleaños</h2>
+        <div class="birthdays-grid">
+            <div class="birthday-month">
+                <h4>Enero - Marzo</h4>
+                <div class="birthday-item">
+                    <span class="birthday-name">Sandra Caceres</span>
+                    <span class="birthday-date">4 Enero</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">Carmen Elena Delgado</span>
+                    <span class="birthday-date">27 Febrero</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">Socorro Carter (Soky)</span>
+                    <span class="birthday-date">20 Marzo</span>
+                </div>
+            </div>
+
+            <div class="birthday-month">
+                <h4>Mayo - Julio</h4>
+                <div class="birthday-item">
+                    <span class="birthday-name">Monseñor Ricardo Tobon</span>
+                    <span class="birthday-date">8 Mayo</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">Mildred Mendez</span>
+                    <span class="birthday-date">16 Junio</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">Beatriz Martinez</span>
+                    <span class="birthday-date">28 Julio</span>
+                </div>
+            </div>
+
+            <div class="birthday-month">
+                <h4>Agosto</h4>
+                <div class="birthday-item">
+                    <span class="birthday-name">Gladys Gil</span>
+                    <span class="birthday-date">5 Agosto</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">Francisco Jose Gil (Pacho)</span>
+                    <span class="birthday-date">6 Agosto</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">Pilar Pineda</span>
+                    <span class="birthday-date">25
