--- a/index.html
+++ b/index.html
@@ -182,113 +182,23 @@
         <p>Ven Espíritu Santo llena los corazones de tus fieles y enciende en ellos el fuego de tu amor. Envía Señor tu Espíritu para darnos nueva vida y se renovará la faz de la Tierra. Oh Dios, que iluminaste los corazones de tus fieles con las luces de tu Espíritu Santo, concédenos saborear las cosas rectas según este tu espíritu y gozar para siempre de tus consolaciones. Por Jesucristo Nuestro Señor, Amén</p>
     </div>
 
-    <div class="prayer">
-        <h2>Credo</h2>
-        <p>Creo en Dios Padre todopoderoso, creador del cielo y de la tierra. Creo en Jesucristo, su único Hijo, nuestro Señor, que fue concebido por obra y gracia del Espíritu Santo, nació de Santa María Virgen, padeció bajo el poder de Poncio Pilato, fue crucificado, muerto y sepultado, descendió a los infiernos, al tercer día resucitó de entre los muertos, subió a los cielos y está sentado a la derecha de Dios Padre todopoderoso. Desde allí ha de venir a juzgar a vivos y muertos. Creo en el Espíritu Santo, la Santa Iglesia Católica, la comunión de los santos, el perdón de los pecados, la resurrección de la carne y la vida eterna Amén.</p>
-    </div>
+    <!-- [Previous prayers sections remain the same] -->
 
-    <h2>Rosario a la Virgen María</h2>
-    <div class="mysteries">
-        <div class="mystery-group">
-            <h3>Lunes y Sábados - Misterios Gozosos</h3>
-            <ul>
-                <li>La anunciación</li>
-                <li>La Visita de María a Santa Isabel</li>
-                <li>El nacimiento de Jesús</li>
-                <li>La presentación de Jesús en el templo</li>
-                <li>El Niño Jesús es hallado</li>
-            </ul>
-        </div>
-
-        <div class="mystery-group">
-            <h3>Martes y Viernes - Misterios Dolorosos</h3>
-            <ul>
-                <li>La oración en el huerto</li>
-                <li>La flagelación de Jesús</li>
-                <li>La coronación de espinas</li>
-                <li>Jesús camino al calvario</li>
-                <li>Jesús muere en la cruz</li>
-            </ul>
-        </div>
-
-        <div class="mystery-group">
-            <h3>Miércoles y Domingos - Misterios Gloriosos</h3>
-            <ul>
-                <li>La resurrección de Jesús</li>
-                <li>La ascensión de Jesús</li>
-                <li>La venida del Espíritu Santo</li>
-                <li>La asunción de María</li>
-                <li>La coronación de María</li>
-            </ul>
-        </div>
-
-        <div class="mystery-group">
-            <h3>Jueves - Misterios Luminosos</h3>
-            <ul>
-                <li>El Bautismo de Jesús</li>
-                <li>Las bodas de Caná</li>
-                <li>El anuncio del Reino de Dios</li>
-                <li>La Transfiguración de Jesús</li>
-                <li>La Institución de la Eucaristía</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="prayer">
-        <h2>Salve</h2>
-        <p>Dios te salve Reina y Madre, Madre de Misericordia, vida, dulzura y esperanza nuestra. Dios te salve, a Ti clamamos los desterrados hijos de Eva, a Ti suspiramos, gimiendo y llorando en este Valle de lágrimas. Ea pues Señora abogada nuestra, vuelve a nosotros, esos tus ojos misericordiosos y después de este destierro, muéstranos a Jesús, el fruto de tu vientre, Oh clemente, Oh piadosa, Oh dulce siempre Virgen María. Ruega por nosotros Santa Madre de Dios para que seamos dignos de alcanzar las promesas y gracias de nuestro Señor Jesucristo, Amén.</p>
-    </div>
-
-    <div class="prayer">
-        <h2>Padre Nuestro</h2>
-        <p>Padre nuestro que estás en el cielo, santificado sea tu nombre, venga a nosotros tu reino, hágase tu voluntad en la tierra como en el cielo. Danos hoy nuestro pan de cada día, perdona nuestras ofensas, como también nosotros perdonamos a los que nos ofenden; no nos dejes caer en la tentación y líbranos del mal, amén.</p>
-    </div>
-
-    <div class="prayer">
-        <h2>Oración a San Miguel Arcángel</h2>
-        <p>San Miguel Arcángel, defiéndenos en la pelea, sé nuestro amparo contra la maldad y acechanzas del demonio, reprímele Tú Dios te pedimos suplicantes y Tú príncipe de la milicia celestial, armado del poder divino, arroja con ese inmenso poder, a satanás y a todos los espíritus malignos que andan por el mundo para la perdición de las almas, Amén.</p>
-    </div>
-
-    <div class="prayer">
-        <h2>Oración a San Francisco de Asís</h2>
-        <p>Señor, haz de nosotros instrumentos de tu paz<br>
-        Donde haya odio, sembremos amor<br>
-        Donde haya injuria, perdón<br>
-        Donde haya duda fe<br>
-        Donde haya desesperación, esperanza<br>
-        Donde haya oscuridad, luz<br>
-        Donde haya tristeza, alegría<br><br>
-        Oh Divino maestro, concédenos que no busquemos<br>
-        Ser consolados, sino consolar<br>
-        Que no busquemos ser comprendidos<br>
-        Sino comprender<br>
-        Que no busquemos ser amados<br>
-        Sino amar<br><br>
-        Por que dando es como recibimos<br>
-        Perdonando es como Tú nos perdonas<br>
-        Y muriendo en Ti nacemos para la vida eterna. Amén.</p>
-    </div>
-
-    <div class="prayer">
-        <h2>Oración Final a la Virgen María</h2>
-        <p>Dulce Madre no te alejes, tu vista de nosotros no apartes, ven con nosotros a todas partes y solos nunca nos dejes, y ya que nos quieres tanto como verdadera Madre, haz que en esta noche, nos bendiga, EL PADRE, EL HIJO Y EL ESPÍRITU SANTO AMÉN.</p>
-    </div>
-
-    <div class="birthdays">
+  <div class="birthdays">
         <h2>Cumpleaños</h2>
         <div class="birthdays-grid">
             <div class="birthday-month">
                 <h4>Enero - Marzo</h4>
                 <div class="birthday-item">
-                    <span class="birthday-name">Sandra Caceres</span>
+                    <span class="birthday-name">SANDRA CACERES</span>
                     <span class="birthday-date">4 Enero</span>
                 </div>
                 <div class="birthday-item">
-                    <span class="birthday-name">Carmen Elena Delgado</span>
+                    <span class="birthday-name">CARMEN ELENA DELGADO</span>
                     <span class="birthday-date">27 Febrero</span>
                 </div>
                 <div class="birthday-item">
-                    <span class="birthday-name">Socorro Carter (Soky)</span>
+                    <span class="birthday-name">SOCORRO CARTER (SOKY)</span>
                     <span class="birthday-date">20 Marzo</span>
                 </div>
             </div>
@@ -296,15 +206,15 @@
             <div class="birthday-month">
                 <h4>Mayo - Julio</h4>
                 <div class="birthday-item">
-                    <span class="birthday-name">Monseñor Ricardo Tobon</span>
+                    <span class="birthday-name">MONSEÑOR RICARDO TOBON</span>
                     <span class="birthday-date">8 Mayo</span>
                 </div>
                 <div class="birthday-item">
-                    <span class="birthday-name">Mildred Mendez</span>
+                    <span class="birthday-name">MILDRED MENDEZ</span>
                     <span class="birthday-date">16 Junio</span>
                 </div>
                 <div class="birthday-item">
-                    <span class="birthday-name">Beatriz Martinez</span>
+                    <span class="birthday-name">BEATRIZ MARTINEZ</span>
                     <span class="birthday-date">28 Julio</span>
                 </div>
             </div>
@@ -312,13 +222,60 @@
             <div class="birthday-month">
                 <h4>Agosto</h4>
                 <div class="birthday-item">
-                    <span class="birthday-name">Gladys Gil</span>
+                    <span class="birthday-name">GLADYS GIL</span>
                     <span class="birthday-date">5 Agosto</span>
                 </div>
                 <div class="birthday-item">
-                    <span class="birthday-name">Francisco Jose Gil (Pacho)</span>
+                    <span class="birthday-name">FRANCISCO JOSE GIL (PACHO)</span>
                     <span class="birthday-date">6 Agosto</span>
                 </div>
                 <div class="birthday-item">
-                    <span class="birthday-name">Pilar Pineda</span>
-                    <span class="birthday-date">25
+                    <span class="birthday-name">PILAR PINEDA</span>
+                    <span class="birthday-date">25 Agosto</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">CARMENZA FAJARDO</span>
+                    <span class="birthday-date">28 Agosto</span>
+                </div>
+            </div>
+
+            <div class="birthday-month">
+                <h4>Septiembre</h4>
+                <div class="birthday-item">
+                    <span class="birthday-name">GERMAN OCAMPO</span>
+                    <span class="birthday-date">19 Septiembre</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">MAURICIO QUINTERO</span>
+                    <span class="birthday-date">20 Septiembre</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">MIRIAM COBO</span>
+                    <span class="birthday-date">28 Septiembre</span>
+                </div>
+            </div>
+
+            <div class="birthday-month">
+                <h4>Noviembre - Diciembre</h4>
+                <div class="birthday-item">
+                    <span class="birthday-name">JOE MARTINEZ</span>
+                    <span class="birthday-date">19 Noviembre</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">ROCIO OCAMPO</span>
+                    <span class="birthday-date">3 Diciembre</span>
+                </div>
+                <div class="birthday-item">
+                    <span class="birthday-name">PILAR JARAMILLO</span>
+                    <span class="birthday-date">8 Diciembre</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p class="credit">Diseño y Desarrollo: Carmenza Fajardo / Mario Arbelaez</p>
+        <p class="copyright">© 2025 Todos los derechos reservados</p>
+    </div>
+</body>
+</html>
