--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
         </div>
     </div>
 
-    <div class="footer">
-        <p class="credit">Diseño y Desarrollo: Carmenza Fajardo / Mario Arbelaez</p>
-        <p class="copyright">© 2025 Todos los derechos reservados</p>
-    </div>
+<div class="footer">
+    <p class="credit">Design and Development: Carmenza Fajardo / Mario Arbelaez</p>
+    <p class="copyright">© 2025 All rights reserved</p>
+</div>
 </body>
 </html>
