--- a/index.html
+++ b/index.html
@@ -184,18 +184,58 @@
 
     <!-- [Previous prayers sections remain the same] -->
 
-  <div class="birthdays">
-        <h2>Cumpleaños</h2>
+ /* Añadir estos estilos en la sección de CSS */
+    .catholic-date {
+        background-color: #e8f4ff;
+        border-left: 4px solid #2563eb;
+        margin: 8px 0;
+        padding: 8px;
+        border-radius: 8px;
+    }
+
+    .catholic-date .event-name {
+        color: #1e40af;
+        font-weight: 600;
+    }
+
+    .catholic-date .event-date {
+        color: #3b82f6;
+        font-weight: 500;
+    }
+
+    /* Actualización de la sección de fechas */
+    <div class="birthdays">
+        <h2>Cumpleaños y Fechas Importantes 2025</h2>
         <div class="birthdays-grid">
             <div class="birthday-month">
-                <h4>Enero - Marzo</h4>
+                <h4>Enero</h4>
+                <div class="catholic-date">
+                    <span class="event-name">Santa María, Madre de Dios</span>
+                    <span class="event-date">1 Enero</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">Epifanía del Señor</span>
+                    <span class="event-date">6 Enero</span>
+                </div>
                 <div class="birthday-item">
                     <span class="birthday-name">SANDRA CACERES</span>
                     <span class="birthday-date">4 Enero</span>
                 </div>
+            </div>
+
+            <div class="birthday-month">
+                <h4>Febrero - Marzo</h4>
                 <div class="birthday-item">
                     <span class="birthday-name">CARMEN ELENA DELGADO</span>
                     <span class="birthday-date">27 Febrero</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">Miércoles de Ceniza</span>
+                    <span class="event-date">5 Marzo</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">San José</span>
+                    <span class="event-date">19 Marzo</span>
                 </div>
                 <div class="birthday-item">
                     <span class="birthday-name">SOCORRO CARTER (SOKY)</span>
@@ -204,23 +244,43 @@
             </div>
 
             <div class="birthday-month">
-                <h4>Mayo - Julio</h4>
+                <h4>Abril</h4>
+                <div class="catholic-date">
+                    <span class="event-name">Domingo de Ramos</span>
+                    <span class="event-date">20 Abril</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">Domingo de Pascua</span>
+                    <span class="event-date">27 Abril</span>
+                </div>
+            </div>
+
+            <div class="birthday-month">
+                <h4>Mayo - Junio</h4>
                 <div class="birthday-item">
                     <span class="birthday-name">MONSEÑOR RICARDO TOBON</span>
                     <span class="birthday-date">8 Mayo</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">Domingo de Pentecostés</span>
+                    <span class="event-date">15 Junio</span>
                 </div>
                 <div class="birthday-item">
                     <span class="birthday-name">MILDRED MENDEZ</span>
                     <span class="birthday-date">16 Junio</span>
                 </div>
-                <div class="birthday-item">
-                    <span class="birthday-name">BEATRIZ MARTINEZ</span>
-                    <span class="birthday-date">28 Julio</span>
+                <div class="catholic-date">
+                    <span class="event-name">Corpus Christi</span>
+                    <span class="event-date">19 Junio</span>
                 </div>
             </div>
 
             <div class="birthday-month">
-                <h4>Agosto</h4>
+                <h4>Julio - Agosto</h4>
+                <div class="birthday-item">
+                    <span class="birthday-name">BEATRIZ MARTINEZ</span>
+                    <span class="birthday-date">28 Julio</span>
+                </div>
                 <div class="birthday-item">
                     <span class="birthday-name">GLADYS GIL</span>
                     <span class="birthday-date">5 Agosto</span>
@@ -228,6 +288,10 @@
                 <div class="birthday-item">
                     <span class="birthday-name">FRANCISCO JOSE GIL (PACHO)</span>
                     <span class="birthday-date">6 Agosto</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">Asunción de la Virgen María</span>
+                    <span class="event-date">15 Agosto</span>
                 </div>
                 <div class="birthday-item">
                     <span class="birthday-name">PILAR PINEDA</span>
@@ -257,22 +321,37 @@
 
             <div class="birthday-month">
                 <h4>Noviembre - Diciembre</h4>
+                <div class="catholic-date">
+                    <span class="event-name">Día de Todos los Santos</span>
+                    <span class="event-date">1 Noviembre</span>
+                </div>
                 <div class="birthday-item">
                     <span class="birthday-name">JOE MARTINEZ</span>
                     <span class="birthday-date">19 Noviembre</span>
+                </div>
+                <div class="catholic-date">
+                    <span class="event-name">Primer Domingo de Adviento</span>
+                    <span class="event-date">30 Noviembre</span>
                 </div>
                 <div class="birthday-item">
                     <span class="birthday-name">ROCIO OCAMPO</span>
                     <span class="birthday-date">3 Diciembre</span>
                 </div>
+                <div class="catholic-date">
+                    <span class="event-name">Inmaculada Concepción</span>
+                    <span class="event-date">8 Diciembre</span>
+                </div>
                 <div class="birthday-item">
                     <span class="birthday-name">PILAR JARAMILLO</span>
                     <span class="birthday-date">8 Diciembre</span>
                 </div>
+                <div class="catholic-date">
+                    <span class="event-name">Navidad</span>
+                    <span class="event-date">25 Diciembre</span>
+                </div>
             </div>
         </div>
     </div>
-
 <div class="footer">
     <p class="credit">Design and Development: Carmenza Fajardo / Mario Arbelaez</p>
     <p class="copyright">© 2025 All rights reserved</p>
